# PatientZero

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.test  LICENSE  README.md  architecture.md  conftest.py  patientzero.db-shm  patientzero.db-wal  plan.md  pyproject.toml  todos.md
.github/workflows/: ci.yml  publish.yml
backend/: README.md  pyproject.toml
backend/agents/: base.py  explainer.py  judge.py  patient.py
backend/agents/prompts/: explainer_analogy_dialog.txt  explainer_analogy_static.txt  explainer_clinical_dialog.txt  explainer_clinical_static.txt  judge_base.txt  patient_base.txt
backend/api/: dependencies.py  main.py
backend/api/routes/: agents.py  analysis.py  chat.py  distributions.py  experiments.py  settings.py  simulate.py
backend/config/: settings.py
backend/db/queries/: sessions.py
backend/llm/: factory.py  openai_provider.py
backend/tests/: conftest.py
backend/tests/agents/: test_doctor.py  test_explainer.py  test_judge.py  test_patient.py
backend/tests/analysis/: test_coverage.py
backend/tests/api/: test_chat.py  test_experiments_optimization_targets.py  test_experiments_optimize.py  test_experiments_patch.py  test_sessions.py  test_simulate.py
backend/tests/db/: test_database.py  test_experiment_sampling.py  test_experiments.py  test_queries.py  test_simulations.py
backend/tests/feedback/: test_template_validation.py
backend/tests/generators/: test_llm.py  test_static.py
backend/tests/llm/: test_factory.py  test_mock.py
backend/tests/simulation/: test_runner.py
core/: __init__.py  agent.py  distribution.py  experiment.py  judge.py  logger.py  sampling.py  simulation.py
core/agents/: __init__.py  base.py  judge.py  prompts.py  sim_agent.py
core/analysis/: coverage.py
core/config/: doctor_distribution.py  patient_distribution.py  personas.py  scenarios.py  settings.py
core/db/: database.py  schema.sql
core/feedback/: feedback.py  template_validation.py
core/generators/: __init__.py  base.py  llm.py  profile.py  static.py
core/llm/: claude_cli_provider.py  dspy_adapter.py  factory.py  mock.py  openai_provider.py
core/repositories/: __init__.py  base.py  (+4 more)
docs/: architecture.md  domain-models.md  experiment.md  generators.md  optimization.md
frontend/: index.html  package-lock.json  package.json
patientzero/: __init__.py  agent.py  experiment.py  judge.py  simulation.py
plan/: 00_overview.md  01_database.md  01_project_setup.md  02_scenarios.md
slides/: structure.md  text.md
(+202 files in other folders)
