[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patientzero"
version = "0.1.0"
description = "A generic framework for LLM-driven patient simulations."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "OpenAI Codex" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pydantic>=2.0.0",
  "openai>=1.0.0",
  "dspy-ai>=2.5.0,<3",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
backend = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sse-starlette>=2.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "backend", "evaluations"]
exclude = ["core/tests/**", "core/**/__pycache__"]
