[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patientzero"
version = "0.1.0"
description = "A generic framework for LLM-driven patient simulations."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Surya Mani" },
  { name = "Aaron Tamte" },
  { name = "Lile Zhang" },
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "python-dotenv>=1.0.0",
  "openai>=1.0.0",
]

[project.optional-dependencies]
backend = [
  "pydantic>=2.0.0",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sse-starlette>=2.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.0",
  "build>=1.0.0",
]
all = ["patientzero[backend]"]

[tool.hatch.build.targets.wheel]
packages = ["patientzero", "backend", "evaluations"]
exclude = ["**/tests/**", "**/__pycache__"]
